css/styles.css
* {
	font-family: 'Poppins';
}

:root {

	/* Light Mode Colors */
	--light-primary: #007BFF;
	--light-text-nav: #CCE5FF;
	--light-shadow: #F2F2F2;
	--light-card-hover: #d9d9d9;

	/* Dark Mode Colors */
	--dark-primary:  #1CA0F2;
	--dark-text-nav: #DBECFF;
	--dark-shadow: #252A41;
	--dark-primary-text: #fff;
	--dark-secondary: #8B97C6;
	--dark-card-hover: #1f212e;
	--dark-bg: #1E202A;
}

.dark-theme {
	background-color: var(--dark-bg);
}

/* Navbar */

.navbar-brand {
	cursor: pointer;
}

.nav-bg-color-light {
	background-color: var(--light-primary) !important;
}

.nav-bg-color-dark { 
	background-color: var(--dark-primary) !important;
}

.nav-text-color-light {
	color: var(--light-text-nav) !important;
}

.nav-text-color-dark {
	color: var(--dark-text-nav) !important;
}

.nav-text-color-light:hover {
	color:  var(--dark-primary-text) !important;
}

.nav-active {
	color: var(--dark-primary-text) !important;
	font-weight: 600;
}

/* Toggle Switch */

#toggle-switch {
	display: flex;
	justify-content: flex-end;
}

.form-check {
	font-size: 25px;
}

/* About Content */

#about-content {
	display: flex;
	min-height: 85vh;
	align-items: center;
}

#about-content .row {
	width: 110%;
}

.test {
	margin-top: 10px;
	margin-bottom: 10px;
	background-color: var(--light-primary);
	height: 300px;
	border-radius: 50%;
}

.test-dark {
	background-color: var(--dark-primary);
}

.heading-text-light {
	font-weight: 300;
	font-size: 3rem;
}

.heading-text-dark {
	color: var(--dark-primary-text) !important;
}

#intro-text {
	line-height: 2;
	font-size: 3rem;
}

.intro-text-dark {
	color: var(--dark-primary-text);
}

#intro-desc {
	font-size: 1.1rem;
	width: 75%;
}

.intro-desc-dark {
	color: var(--dark-secondary);
}

/* Education Section */

#education img {
	width: 100%;
	height: 150px;
}

.card-dark {
	background-color: var(--dark-shadow);
}

.score , .card-text-dark {
	color: var(--dark-secondary);
}

.card-title-dark {
	color: var(--dark-primary-text);
}

#education {
	margin-bottom: 100px;
}

.text-shadow-light {
	text-transform: uppercase;
	letter-spacing: 3px;
	font-weight: 700;
	font-size: 4rem;
	color:  var(--light-shadow);
	position: relative;
	top: -50px;
	left: 10px;
	z-index: -1;
}

.text-shadow-dark {
	color: var(--dark-shadow);
}

/* Skills Section */

.skill-text {
	margin: 0;
	font-weight: 300;
	font-size: 1.1rem;
	margin-left: 20px;
}

.skill-text-1 {
	margin-left: 27px;
}

.skill-text-2 {
	margin-left: 19px;
}

.skill-text-3 {
	margin-left: 22.5px;
}

.skill-text-dark {
	color: var(--dark-primary-text);
}

.skill-box {
	border-bottom: 3px solid var(--light-primary);
	margin: 0 0 15px;
	padding: 18px 20px;
	display: flex;
	align-items: center;
	border-radius: 5px 5px 0 0;
}

.skill-box-light {
	background-color: var(--light-shadow);
	transition: 0.5s;
}

.skill-box-dark {
	border-bottom: 3px solid var(--dark-primary);
	background-color: var(--dark-shadow);
	transition: 0.5s;
}

.skill-box-dark:hover {
	background-color: var(--dark-card-hover);
	transition: 1s;
}

.skill-box-light:hover {
	transition: 1s;
	background-color: var(--light-card-hover);
}

.skill-logo {
	width: 25px;
}

.skill-logo-1 {
	width: 18px;
}

.skill-logo-2 {
	width: 26px;
}

.skill-logo-3 {
	width: 22.5px;
}


@media (max-width: 1199px) {
	#intro-text {
		font-size: 2.8rem;
	}
}

@media (max-width: 991px) {
	.introduction {
		margin-top: 40px;
		margin-bottom: 40px;
		align-items: center;
	}
	#intro-desc {
		text-align: center;
	}
	#about-content .row {
		flex-direction: column-reverse;
	}
	#education img {
		width: 90%;
	}
}

@media (max-width:  768px) {
	#intro-text {
		font-size: 2.5rem;
	}
	#education img {
		width: 100%;
	}
}

@media (max-width:  576px) {
	#intro-text {
		font-size: 1.8rem;
	}
	.heading-text-light {
		margin-bottom: 40px;
		font-size: 2.5rem;
	}
	.text-shadow-light {
		display: none;
	}
	#education {
		margin-bottom: 50px;
	}
	#education img {
		width: 100%;
		height: 100%;
	}
	#education .container {
		width: 80vw;
	}
	#skills .container {
		display: flex;
		flex-direction: column;
		align-items: center;
	}
	#skills .row {
		width: 80vw;
	}
}

@media (max-width:  450px) {
	#intro-text {
		font-size: 2rem;
	}
	#education .container {
		width: 90vw;
	}
	#skills .row {
		width: 90vw;
	}
}

@media (max-width:  400px) {
	#intro-desc {
		width: 90%;
	}
	#intro-text {
		font-size: 1.5rem;
	}
	#intro-desc {
		font-size: 0.9rem; 
	}
	.heading-text-light {
		font-size: 2rem;
	}
	#education .container {
		width: 95vw;
	}
	#skills .row {
		width: 95vw;
	}
}

